--- a/3 - holy-grail/index.html
+++ b/3 - holy-grail/index.html
@@ -7,7 +7,47 @@
   <title>Holy Grail Layout</title>
 </head>
 <body>
-  <div class="grid-container">
+    <div class="grid-container">
+        <header>
+            <h1>The Fog Wall</h1>
+        </header>
+        <nav>
+            <p>Categories</p>
+            <li>Film & Cinema</li>
+            <li>Books & Reading</li>
+            <li>Games & Consoles</li>
+            <li>Food & Drink</li>
+            <li>World News</li>
+            <li>Outdoor Living</li>
+        </nav>
+        <article>
+            <h2>The Best 5 Open World Adventure Games</h2>
+            <img src="img/banner.png" alt="article banner">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus nesciunt, aliquid quod voluptatum facilis voluptas architecto? Animi eligendi soluta, quisquam expedita iusto cum ullam necessitatibus beatae eum temporibus nihil autem maiores quae consequatur sunt dolorum nobis odit, provident explicabo! Harum aspernatur hic commodi quisquam deserunt provident nam unde fugiat eos!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus nesciunt, aliquid quod voluptatum facilis voluptas architecto? Animi eligendi soluta, quisquam expedita iusto cum ullam necessitatibus beatae eum temporibus nihil autem maiores quae consequatur sunt dolorum nobis odit, provident explicabo! Harum aspernatur hic commodi quisquam deserunt provident nam unde fugiat eos!</p>
+        </article>
+        <aside>
+            <ul>
+                <li>
+                    <p><strong>Published on:</strong></p>
+                    <p>May 6th 2022</p>
+                </li>
+                <li>
+                    <p><strong>In The category:</strong></p>
+                    <p>Games & Consoles</p>
+                </li>
+                <li>
+                    <p><strong>Written by:</strong></p>
+                    <p>Mario</p>
+                </li>
+            </ul>
+        </aside>
+        <footer>
+          <small>&copy; Copyright 2024 The Fog Wall</small>
+        </footer>
+    </div>
+
+  <!-- <div class="grid-container">
     <header>
       <h1>The Fog Wall</h1>
     </header>
@@ -45,6 +85,6 @@
     <footer>
       <p>Copyright 2022 The Fog Wall</p>
     </footer>
-  </div>
+  </div> -->
 </body>
 </html>
