--- a/4 - masonry/index.html
+++ b/4 - masonry/index.html
@@ -7,6 +7,60 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/">Articles</a>
+      <h1>
+        <div>Express</div>
+        <div>Yourself</div>
+      </h1>
+      <a href="/">Guides</a>
+      <a href="/">Contacts</a>
+    </nav>
+  </header>
+
+  <main>
+    <div class="short">
+      <h3>A note about style</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, repellat!</p>
+      <a href="/">Read More</a>
+    </div>
+    <div class="tall">
+      <img src="/4 - masonry/img/Untitled-1.jpg" alt="model">
+    </div>
+    <div class="short">
+    <h3>A note about style</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, repellat!</p>
+    <a href="/">Read More</a>
+  </div>
+    <div class="tall">
+    <img src="/4 - masonry/img/Untitled-2.jpg" alt="model">
+  </div>
+    <div class="tall">
+    <img src="/4 - masonry/img/Untitled-3.jpg" alt="model">
+  </div>
+    <div class="tall">
+    <h3>A note about style</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, repellat!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, repellat!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, repellat!</p>
+    <a href="/">Read More</a>
+  </div>
+    <div class="tall">
+      <img src="/4 - masonry/img/Untitled-1.jpg" alt="model">
+    </div>
+        <div class="short">
+          <h3>A note about style</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, repellat!</p>
+      <a href="/">Read More</a>
+    </div>
+        <div class="short">
+          <h3>A note about style</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, repellat!</p>
+      <a href="/">Read More</a>
+    </div>
+  </main>
+
 </body>
 </html>
